--- a/index.html
+++ b/index.html
@@ -2,56 +2,44 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>進捗管理システム Pro</title>
+    <title>共有・送付進捗管理システム</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
-    <h1>送付進捗管理システム</h1>
+    <h1>送付進捗管理 (共有版)</h1>
     
-    <div id="loading" class="loading-overlay">通信中...</div>
+    <div id="loading" class="loading-overlay">データを読み込み中...</div>
 
     <div class="input-form">
-        <div class="form-section">
-            <div class="form-group">
-                <label>お客様名</label>
-                <input type="text" id="customerName" list="customer-list" placeholder="入力または選択">
-                <datalist id="customer-list"></datalist>
-            </div>
-            <div class="form-group">
-                <label>担当者</label>
-                <select id="staffName"></select>
-                <input type="text" id="staffNameFree" placeholder="直接入力用" style="margin-top:4px;">
-            </div>
-            <div class="form-group"><label>明細発行日</label><input type="date" id="issueDate"></div>
-            <div class="form-group"><label>管理表入力日</label><input type="date" id="inputDate"></div>
-            <div class="form-group"><label>郵送日</label><input type="date" id="mailDate"></div>
-            <div class="form-group"><label>メール送信日</label><input type="date" id="emailDate"></div>
-            <div class="form-group" style="grid-column: span 2;"><label>メモ</label><textarea id="memo" rows="1"></textarea></div>
+        <div class="form-group">
+            <label>お客様名（サジェスト）</label>
+            <input type="text" id="customerName" list="customer-list" placeholder="入力または選択">
+            <datalist id="customer-list"></datalist>
         </div>
-        
-        <div class="save-control">
-            <div class="check-box-large">
-                <input type="checkbox" id="isCompleted">
-                <label for="isCompleted">完了</label>
-            </div>
-            <button class="btn-submit" onclick="saveData()">クラウドへ保存する</button>
+        <div class="form-group">
+            <label>担当者</label>
+            <select id="staffName" class="staff-select">
+                <option value="">選択してください</option>
+            </select>
+            <input type="text" id="staffNameFree" placeholder="直接入力も可" style="margin-top:5px;">
         </div>
+        <div class="form-group"><label>明細発行日</label><input type="date" id="issueDate"></div>
+        <div class="form-group"><label>管理表入力日</label><input type="date" id="inputDate"></div>
+        <div class="form-group"><label>郵送日</label><input type="date" id="mailDate"></div>
+        <div class="form-group"><label>メール送信日</label><input type="date" id="emailDate"></div>
+        <div class="form-group" style="grid-column: span 2;"><label>メモ</label><textarea id="memo" rows="1"></textarea></div>
+        <div class="form-group" style="flex-direction: row; align-items: center; gap: 10px;">
+            <input type="checkbox" id="isCompleted"> <label>完了</label>
+        </div>
+        <button class="btn-submit" onclick="saveData()">クラウドへ保存する</button>
     </div>
 
-    <div class="table-frame">
+    <div class="table-container">
         <table id="dataTable">
             <thead>
                 <tr>
-                    <th style="width: 150px;">お客様名</th>
-                    <th style="width: 100px;">担当者</th>
-                    <th style="width: 110px;">明細発行</th>
-                    <th style="width: 110px;">入力日</th>
-                    <th style="width: 110px;">郵送日</th>
-                    <th style="width: 110px;">メール</th>
-                    <th>メモ</th>
-                    <th style="width: 50px;">完了</th>
-                    <th class="no-print" style="width: 100px;">操作</th>
+                    <th>お客様名</th><th>担当者</th><th>明細発行</th><th>入力日</th><th>郵送</th><th>メール</th><th>メモ</th><th>完了</th><th class="no-print">操作</th>
                 </tr>
             </thead>
             <tbody id="tableBody"></tbody>
@@ -59,22 +47,7 @@
     </div>
 
     <div class="footer-actions">
-        <button class="btn-secondary" onclick="window.print()">一覧をPDF出力のみ</button>
-        <button class="btn-pdf" onclick="processAllComplete()">全件完了（PDF保存後データ削除）</button>
-    </div>
-
-    <div class="master-setting no-print">
-        <h3>マスタ登録</h3>
-        <div class="master-grid">
-            <div class="master-item">
-                <input type="text" id="newCustomer" placeholder="新しいお客様名">
-                <button onclick="addMaster('addCustomerMaster', 'newCustomer')">お客様登録</button>
-            </div>
-            <div class="master-item">
-                <input type="text" id="newStaff" placeholder="新しい担当者名">
-                <button onclick="addMaster('addStaffMaster', 'newStaff')">担当者登録</button>
-            </div>
-        </div>
+        <button class="btn-pdf" onclick="processAllComplete()">全件完了（PDF保存してデータ削除）</button>
     </div>
 </div>
 <script src="script.js"></script>
